docs(user): generated swagger docs
