# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /v1
 definitions:
+  handler.tokenResponse:
+    properties:
+      token:
+        type: string
+    type: object
   handler.userLoginRequest:
     properties:
       user:
@@ -35,13 +40,9 @@ definitions:
           email:
             type: string
           role:
-            type: string
-          token:
-            type: string
+            type: integer
           username:
             type: string
-        required:
-        - token
         type: object
     type: object
   utils.Error:
@@ -64,10 +65,88 @@ info:
   title: Restaurant backend API server
   version: 0.1.0
 paths:
-  /users:
+  /auth/customer:
     post:
       consumes:
       - application/json
+      description: Register new user in server
+      parameters:
+      - description: User credentials
+        in: body
+        name: User
+        required: true
+        schema:
+          $ref: '#/definitions/handler.userRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.tokenResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/utils.Error'
+      summary: Register new user with customer role
+      tags:
+      - Guest user
+  /auth/owner:
+    post:
+      consumes:
+      - application/json
+      description: Register new user in server
+      parameters:
+      - description: User credentials
+        in: body
+        name: User
+        required: true
+        schema:
+          $ref: '#/definitions/handler.userRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.tokenResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/utils.Error'
+      summary: Register new user with owner role
+      tags:
+      - Guest user
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Get User by id in token
+      parameters:
+      - description: User credentials
+        in: body
+        name: User
+        required: true
+        schema:
+          $ref: '#/definitions/handler.userLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.userResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/utils.Error'
+      summary: Get User by id in token
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      deprecated: true
       description: Register new user in server
       parameters:
       - description: User credentials
@@ -87,9 +166,34 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/utils.Error'
-      summary: Register new user
+      summary: Register new user with owner role
       tags:
       - Guest user
+    put:
+      consumes:
+      - application/json
+      description: Update User by id in token. It can update
+      parameters:
+      - description: User credentials
+        in: body
+        name: User
+        required: true
+        schema:
+          $ref: '#/definitions/handler.userLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.userResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/utils.Error'
+      summary: Update user by id  in token
+      tags:
+      - users
   /users/login:
     post:
       consumes:
@@ -108,7 +212,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.userResponse'
+            $ref: '#/definitions/handler.tokenResponse'
         default:
           description: ""
           schema:
